# finSight-ai-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Production-ready-fastapi-boilerplate-prompt.md  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: main.py  server.py
app/ai/agents/: chatbot_agent.py  executor_agent.py  langgraph_agent.py  orchestrator_agent.py  planner_agent.py  tool_executor.py  verification_agent.py
app/ai/agents/chat_bot/: chatbot_agent.py  single_agent_chatbot.py
app/ai/agents/tools/: base.py  rag_tool.py  tool_registry.py
app/ai/memory/: memory_manager.py  summary_memory.py  vector_memory.py
app/ai/prompts/: agent_prompt.py  decision_prompt.py  planner_prompt.py  react_prompt.py  system.py
app/ai/rag/: ingest.py  pipeline.py  retriever.py  vectorstore.py
app/ai/tools/: base.py  calculator.py  document_search.py  financial_metrics.py  rag_tool.py  tool_executor.py  tool_ranker.py  tool_registry.py
app/api/v1/: api.py
app/api/v1/endpoints/: chat.py  rag.py
app/core/: config.py  events.py  logging.py
app/db/: init_db.py  mongo.py
app/exceptions/: __init__.py  auth.py  base.py
app/middleware/: correlation_id.py  logging.py
app/schemas/: AgentDecision.py  chat.py  planner_schema.py  rag.py  tool_schema.py
app/services/: chat_service.py
app/utils/: agent_output_parser.py  agent_retry.py  agent_util.py  retry.py
app/utils/parsing/: output_parser.py  planner_parser.py
notes/: single_agent_chatbot_native_code.py
tests/: conftest.py  test_auth.py  test_health.py
vectorstore/krsna/: index.faiss  index.pkl
