[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
start = "app.server:main"

[tool.uv]
package = true

[project]
name = "fin-sight"
version = "1.0.0"
description = "Production-ready FastAPI + Beanie (MongoDB) boilerplate"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "beanie>=1.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pymongo>=4.16.0",
    "langchain-groq>=1.1.2",
    "langchain-core>=1.2.14",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-classic>=1.0.1",
    "aiofiles>=25.1.0",
    "langchain-huggingface>=1.2.1",
    "pypdf>=6.9.1",
    "sentence-transformers>=5.3.0",
    "faiss-cpu>=1.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mongomock-motor>=0.0.34",
    "ruff>=0.9.0",
    "black>=24.10.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print (no print statements)
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "S105", # hardcoded password (false positives on variable names)
    "S106", # hardcoded password argument
    "B008", # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["motor.*", "beanie.*", "passlib.*", "jose.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
